@@ -19,6 +19,7 @@
  --mobile-npbar-height:0px;
  --mobile-npbar-height-thin:22px;
  --mobile-npbar-height-thick:48px;
+ --tab-bar-height:48px;
  --list-elem-height:50px;
  --list-elem-3line-height:70px;
  --pq-album-header:68px;
